[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scoreboard/Scoreboard.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scoreboard/ScoreForm.gd" type="Script" id=2]

[node name="ScoreForm" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -254.0
margin_top = -72.0
margin_right = 254.0
margin_bottom = 63.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 134.0

[node name="NameField" type="LineEdit" parent="HBoxContainer"]
margin_right = 235.0
margin_bottom = 134.0
size_flags_horizontal = 3
placeholder_text = "Enter your name"

[node name="PointField" type="LineEdit" parent="HBoxContainer"]
margin_left = 239.0
margin_right = 474.0
margin_bottom = 134.0
size_flags_horizontal = 3
placeholder_text = "000000"

[node name="Ok" type="Button" parent="HBoxContainer"]
margin_left = 478.0
margin_right = 508.0
margin_bottom = 134.0
text = "Ok"

[node name="Scoreboard" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="pressed" from="HBoxContainer/Ok" to="." method="_on_Ok_pressed"]
